--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3 class="cyan-text text-accent-3 center-align">Edit Category</h3>
-  <div class="card-panel grey lighten-5">
+<div class="row flashes">
+<h4 class="cyan accent-3 center-align white-text header-shadow">Edit Category</h4> 
+</div>  <div class="card-panel grey lighten-5">
   <div class="row">
     <form class="col s12" method="POST" action="{{ url_for('edit_category', category_id=category._id) }}">
 
@@ -18,18 +19,15 @@
         <!-- submit button -->
         <div class="row">
         <div class="col s12 center-align">
-        <button class="btn-large light-green accent-2 text-shadow" type="submit">
-          Update Category
+        <button class="btn-large cyan accent-3" type="submit">
+          Update 
     <i class="fas fa-edit right"></i>
       </button>
-                <a href="{{ url_for('get_categories') }}" class="btn-large light-green accent-4 text-shadow">
+                <a href="{{ url_for('get_categories') }}" class="btn-large light-green accent-4">
         Cancel<i class="fas fa-times-circle right"></i></a>
-
-          
-
         </div>
         </div>      
     </form>
   </div>
-
+  </div>
 {% endblock %}
