--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,26 +1,54 @@
 {% extends 'base.html' %}
 {% block content %}
-<h3 class="cyan-text text-accent-3 center-align">Manage Categories</h3>
-<div class="">
-<div class="col s12 center-align">
-<a href="{{ url_for('add_category') }}" class="btn-large cyan accent-3 text-shadow">
-Add Category <i class="fas fa-plus-square right"></i></a>
-</div>
+<div class="row flashes">
+<h4 class="cyan accent-3 center-align white-text header-shadow">Manage event categories</h4> 
 </div>
 <div class="row">
 {% for category in categories %}
     <div class="col s12 m3">
-      <div class="card cyan accent-3 text-shadow center-align">
-        <div class="card-content white-text">
-          <span class="card-title">{{ category.category_name }}</span>
+      <div class="card">
+        <div class="card-image">
+          {% if category.category_name == "Cycle" %}
+          <img src="{{ url_for('static', filename='images/cycle.jpg') }}" />
+          {% else %} {% if category.category_name == "Coffee" %}
+          <img src="{{ url_for('static', filename='images/coffee.jpg') }}" />
+          {% else %} {% if category.category_name == "Walk" %}
+          <img src="{{ url_for('static', filename='images/walk.jpg') }}" />
+          {% else %} {% if category.category_name == "Market" %}
+          <img src="{{ url_for('static', filename='images/market.jpg') }}" />
+          {% else %} {% if category.category_name == "Social" %}
+          <img src="{{ url_for('static', filename='images/social.jpg') }}" />
+          {% else %} {% if category.category_name == "Workshop" %}
+          <img src="{{ url_for('static', filename='images/workshop.jpg') }}" />
+          {% else %} {% if category.category_name == "Book Club" %}
+          <img src="{{ url_for('static', filename='images/bookclub.jpg') }}" />
+          {% else %} {% if category.category_name == "Language Class" %}
+          <img src="{{ url_for('static', filename='images/language.jpg') }}" />
+          {% else %}
+          <img src="{{ url_for('static', filename='images/defaultwall.jpg') }}" />
+          {% endif %} {% endif %} {% endif %} {% endif %} {% endif %} {% endif
+          %}{% endif %}{% endif %}
         </div>
-        <div class="card-action">
-        <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn-small light-green accent-2">Edit</a>
-      <a href="{{ url_for('delete_category', category_id=category._id) }}" class="btn-small light-green accent-4">Delete</a>
+        <div class="event-category">{{ category.category_name }}</div>
+        <div class="card-action center-align">
+        <a href="{{ url_for('edit_category', category_id=category._id) }}" class="btn func-button cyan accent-3">          
+        Edit 
+        <i class="fas fa-edit right"></i></a>
+      <form action="{{ url_for('delete_category', category_id=category._id) }}" method="POST">
+        <button class="btn func-button light-green accent-4" name="delete" type="submit" onclick="deleteFunction()">
+            <i class="fas fa-times-circle right"></i>
+                Delete
+        </button>
+        </form>
         </div>
       </div>
     </div>
     {% endfor %}
   </div>
-
+<div class="row">
+<div class="col s12 center-align">
+<a href="{{ url_for('add_category') }}" class="btn-large cyan accent-3">
+Add new Category <i class="fas fa-plus-square right"></i></a>
+</div>
+</div>
 {% endblock %}
