--- a/templates/my_events.html
+++ b/templates/my_events.html
@@ -9,7 +9,7 @@
 <div class="row">
   {% for event in events %}
     {% if session.user == event.created_by or session.user == "admin" %}
-    <div class="col s12 m3 center-align valign-wrapper">
+    <div class="col s12 m4 l3 center-align valign-wrapper">
     <div class="card">
       <div class="card-image">
         {% if event.category_name == "Cycle" %}
