--- a/templates/events.html
+++ b/templates/events.html
@@ -1413,10 +1413,8 @@
 </div>
 <ul class="collapsible">
   <li>
-    <div
-      class="collapsible-header cyan accent-3 center-align"
-      id="all-events-flash"
-    >
+    <div class="collapsible-header cyan accent-3 center-align"
+      id="all-events-flash">
       <h4 class="cyan accent-3 white-text">
         All Events <i class="fa fa-caret-down" aria-hidden="true"></i>
       </h4>
